// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Connect(withCurrentUser(HotspotViewerRenderer))
  loading={true}
  onUpdateHotspot={[Function]}
  securityCategories={
    Object {
      "cat1": Object {
        "title": "cat1",
      },
    }
  }
/>
`;

exports[`should render correctly 2`] = `
<Connect(withCurrentUser(HotspotViewerRenderer))
  hotspot={
    Object {
      "id": "I am a detailled hotspot",
    }
  }
  loading={false}
  onUpdateHotspot={[Function]}
  securityCategories={
    Object {
      "cat1": Object {
        "title": "cat1",
      },
    }
  }
/>
`;
